# Address PR review comments and remove deprecated Spotify recommendations API
- Remove Spotify Recommendations API (endpoint, service methods, tests) as deprecated
- Fix VotingService: when 1 song remains, broadcast directly instead of calling
  nextSong() which would incorrectly mark the last song as performed
- Fix SongService: include remaining song in queue broadcast when 1 song left
- Fix ReactionMessageHandler: add null checks on payload fields, catch
  IllegalArgumentException from ReactionType.fromValue, remove unused UserService
- Fix VotingServiceTest: capture before-time to avoid timing-flaky assertion
- Fix SessionsController comment typo (already resolved)
- Remove unused @GetMapping/@PathVariable imports from SongsController